--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,11 @@
             </ul>
         </nav>
     </header>
-    
+    <main>
+
+    </main>
+    <footer>
+        <blink>asf </blink>
+    </footer>
 </body>
 </html>
