--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
@@ -19,7 +18,18 @@
         </nav>
     </header>
     <main>
-
+        <img src="https://pisum.photos/200/200" alt="">
+        <img src="https://pisum.photos/200/200" alt="">
+        <img src="https://pisum.photos/200/200" alt="">
+        <img src="https://pisum.photos/200/200" alt="">
+        <img src="https://pisum.photos/200/200" alt="">
+        <img src="https://pisum.photos/200/200" alt="">
+        <img src="https://pisum.photos/200/200" alt="">
+        <img src="https://pisum.photos/200/200" alt="">
+        <img src="https://pisum.photos/200/200" alt="">
+        <img src="https://pisum.photos/200/200" alt="">
+        <img src="https://pisum.photos/200/200" alt="">
+        <img src="https://pisum.photos/200/200" alt="">
     </main>
     <footer>
         <blink>asf </blink>
