Corrigindo arquivo de configuração

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     </main>
     <footer>
         <blink>asf </blink>
+        <marquee behavior="" direction="">asdfa</marquee>
     </footer>
 </body>
 </html>
