Mudança do HTML

--- a/public/index.html
+++ b/public/index.html
@@ -17,14 +17,14 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <div>
         <img src="https://pisum.photos/200/200" alt="">
         <img src="https://pisum.photos/200/200" alt="">
         <img src="https://pisum.photos/200/200" alt="">
         <img src="https://pisum.photos/200/200" alt="">
         <img src="https://pisum.photos/200/200" alt="">
         <img src="https://pisum.photos/200/200" alt="">
-    </main>
+    </div>
     <footer>
     </footer>
 </body>
