--- a/public/index.html
+++ b/public/index.html
@@ -17,14 +17,16 @@
             </ul>
         </nav>
     </header>
-    <div>
+    <main>
+        <div>
         <img src="https://pisum.photos/200/200" alt="">
         <img src="https://pisum.photos/200/200" alt="">
         <img src="https://pisum.photos/200/200" alt="">
         <img src="https://pisum.photos/200/200" alt="">
         <img src="https://pisum.photos/200/200" alt="">
-        <img src="https://pisum.photos/200/200" alt="">
-    </div>
+        <img src="https://pisum.photos/200/200" alt="">            
+        </div>
+    </main>
     <footer>
     </footer>
 </body>
